# simple_synth-vst3sdk

./: .gitignore  CMakeLists.txt  README.md
resource/: musyntheditor.uidesc
source/: musynthcids.h  musynthcontroller.cpp  musynthcontroller.h  musynthentry.cpp  musynthprocessor.cpp  musynthprocessor.h  params.h  version.h
